Final demo code for DevDays Europe 2022

--- a/LeaderboardWebAPI/appsettings.Development.json
+++ b/LeaderboardWebAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LeaderboardContext": "Server=tcp:192.168.2.12,5433;Database=Leaderboard;User Id=sa;Password=Pass@word;Trusted_Connection=False;"
+    "LeaderboardContext": "Server=tcp:localhost,5433;Database=Leaderboard;User Id=sa;Password=Pass@word;Trusted_Connection=False;"
   },
   "Logging": {
     "LogLevel": {
