--- a/MinimalLeaderboardWebAPI/MinimalLeaderboardWebAPI.csproj
+++ b/MinimalLeaderboardWebAPI/MinimalLeaderboardWebAPI.csproj
@@ -4,7 +4,6 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>disable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<PreserveCompilationContext>true</PreserveCompilationContext>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,9 +11,13 @@
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.0-preview.3.22178.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.3.22175.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.0-preview.3.22175.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0-preview.3.22175.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0-preview.3.22175.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.21.0-beta1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<InternalsVisibleTo Include="MinimalLeaderboardWebAPI.Tests" />
 	</ItemGroup>
 
 </Project>
