--- a/EmptyMinimalWebAPI/Properties/launchSettings.json
+++ b/EmptyMinimalWebAPI/Properties/launchSettings.json
@@ -1,28 +1,28 @@
 {
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52419",
-      "sslPort": 44378
+      "applicationUrl": "http://localhost:60040",
+      "sslPort": 0
     }
   },
   "profiles": {
-    "MinimalLeaderboardWebAPI": {
+    "http": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "openapi",
+      "launchUrl": "todos",
+      "applicationUrl": "http://localhost:5227",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:7239;http://localhost:5239",
-      "dotnetRunMessages": true
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "openapi",
+      "launchUrl": "todos",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
