--- a/EmptyMinimal/Properties/launchSettings.json
+++ b/EmptyMinimal/Properties/launchSettings.json
@@ -1,20 +1,20 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56840",
+      "applicationUrl": "http://localhost:60040",
       "sslPort": 0
     }
   },
   "profiles": {
-    "EmptyMinimal": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5259",
+      "launchUrl": "todos",
+      "applicationUrl": "http://localhost:5227",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "todos",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
