--- a/MinimalLeaderboardWebAPI.Tests/MinimalLeaderboardWebAPI.Tests.csproj
+++ b/MinimalLeaderboardWebAPI.Tests/MinimalLeaderboardWebAPI.Tests.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+		<!--<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />-->
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0-preview.4.23260.4" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
 		<PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
