--- a/MinimalLeaderboardWebAPI/appsettings.json
+++ b/MinimalLeaderboardWebAPI/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "DefaultScheme": "UserBearer",
+    "Schemes": {
+      "UserBearer2": {
+        "ValidAudiences": [
+          "http://localhost:52419",
+          "https://localhost:44378",
+          "https://localhost:7239",
+          "http://localhost:5239"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
+  }
 }
